identation globale code html + test sur animations foodcard :memo:

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="fr">
 	<head>
@@ -20,103 +21,112 @@
 			<h1 class="logo logoindex">ohmyfood</h1>
 		</header>
 		<main>
-		<!-- Section localisation-->
+			<!-- Section localisation-->
 			<section class="localisation">
 				<i class="fas fa-map-marker-alt"></i>
-					<span class="localisationtext">Lyon, Croix Rousse</span>
+				<span class="localisationtext">Lyon, Croix Rousse</span>
 			</section>
-		<!-- Section explore-->
+			<!-- Section explore-->
 			<section class="explore">
 				<h2 class="exploretitle">Réservez le menu qui<br> vous convient</h2>
-					<p class="exploretext">Découvrez des restaurants d'exception séléctionnés par nos soins.</p>
-					<button class="explorebutton">Explorer nos restaurants</button>
+				<p class="exploretext">
+					Découvrez des restaurants d'exception séléctionnés par nos soins.
+				</p>
+				<button class="explorebutton">Explorer nos restaurants</button>
 			</section>
-		<!-- Section fonctionnement-->
+			<!-- Section fonctionnement-->
 			<section class="fonctionnement">
 				<h2 class="fonctionnementtitle">Fonctionnement</h2>
-					<ol class="fonctionnementetapes">
-						<li class="fonctionnementcarte">
-							<i class="fas fa-mobile-alt"></i>
-							<span class="fonctionnementtexte">Choisissez un restaurant</span>
-						</li>
-						<li class="fonctionnementcarte">
-							<i class="fas fa-list-ul"></i>
-							<span class="fonctionnementtexte">Composez votre menu</span>
-						</li>
-						<li class="fonctionnementcarte">
-							<i class="fas fa-store"></i>
-							<span class="fonctionnementtexte">Choisissez un restaurant</span>
-						</li>
-					</ol>
+				<ol class="fonctionnementetapes">
+					<li class="fonctionnementcarte">
+						<i class="fas fa-mobile-alt"></i>
+						<span class="fonctionnementtexte">Choisissez un restaurant</span>
+					</li>
+					<li class="fonctionnementcarte">
+						<i class="fas fa-list-ul"></i>
+						<span class="fonctionnementtexte">Composez votre menu</span>
+					</li>
+					<li class="fonctionnementcarte">
+						<i class="fas fa-store"></i>
+						<span class="fonctionnementtexte">Choisissez un restaurant</span>
+					</li>
+				</ol>
 			</section>
-		<!-- Section restaurants-->
+			<!-- Section restaurants-->
 			<section class="restaurants">
 				<h2 class="restaurantstitle">Restaurants</h2>
 				<div class="cartecontainer">
 					<div class="restaurantcartes carte1">
-					<a class="carte" href="lesapothicaires.html">
-						<header class="carteheader">
-							<img src="layout/composants/images/lesapothicaires.jpeg" alt class="carteimage"/>
+						<a class="carte" href="lesapothicaires.html">
+							<header class="carteheader">
+								<img src="layout/composants/images/lesapothicaires.jpeg" alt class="carteimage"/>
 								<span class="restaurantlegend">Nouveau</span>
-						</header>
-						<footer>
-							<h3 class="restauranttitle">Les apothicaires</h3>
-							<div class="restaurantquartier">Foch</div>
-							<div class="menuicone">
-								<i class="far fa-heart emptyheart"></i>
-								<i class="fas fa-heart fullheart"></i>
-
-							</div>
-						</footer>
-					</a>
+							</header>
+							<footer>
+								<h3 class="restauranttitle">Les apothicaires</h3>
+								<div class="restaurantquartier">
+									Foch
+								</div>
+								<div class="menuicone">
+									<i class="far fa-heart emptyheart"></i>
+									<i class="fas fa-heart fullheart"></i>
+								</div>
+							</footer>
+						</a>
 					</div>
 					<div class="restaurantcartes carte2">
-					<a class="carte" href="bistrotdupotager.html">
-						<h eader class="carteheader">
-							<img src="layout/composants/images/bistrootdupotager.jpeg" alt class="carteimage"/>
+						<a class="carte" href="bistrotdupotager.html">
+							<h eader class="carteheader">
+								<img src="layout/composants/images/bistrootdupotager.jpeg" alt class="carteimage"/>
 								<span class="restaurantlegend">Nouveau</span>
-						</header>
-						<footer>
-							<h3 class="restauranttitle">Le bistrot du potager</h3>
-							<div class="restaurantquartier">Gerland</div>
-							<div class="menuicone">
-								<i class="far fa-heart emptyheart"></i>
-								<i class="fas fa-heart fullheart"></i>
-							</div>
-						</footer>
-					</a>
+							</header>
+							<footer>
+								<h3 class="restauranttitle">Le bistrot du potager</h3>
+								<div class="restaurantquartier">
+									Gerland
+								</div>
+								<div class="menuicone">
+									<i class="far fa-heart emptyheart"></i>
+									<i class="fas fa-heart fullheart"></i>
+								</div>
+							</footer>
+						</a>
 					</div>
 					<div class="restaurantcartes carte3">
-					<a class="carte" href="cozna.html">
-						<header class="carteheader">
-							<img src="layout/composants/images/cozna.jpeg" alt class="carteimage"/>
+						<a class="carte" href="cozna.html">
+							<header class="carteheader">
+								<img src="layout/composants/images/cozna.jpeg" alt class="carteimage"/>
 								<span class="restaurantlegend">Nouveau</span>
-						</header>
-						<footer>
-							<h3 class="restauranttitle">Cozna</h3>
-							<div class="restaurantquartier">Sainte Claire</div>
-							<div class="menuicone">
-								<i class="far fa-heart emptyheart"></i>
-								<i class="fas fa-heart fullheart"></i>
-							</div>
-						</footer>
-					</a>
+							</header>
+							<footer>
+								<h3 class="restauranttitle">Cozna</h3>
+								<div class="restaurantquartier">
+									Sainte Claire
+								</div>
+								<div class="menuicone">
+									<i class="far fa-heart emptyheart"></i>
+									<i class="fas fa-heart fullheart"></i>
+								</div>
+							</footer>
+						</a>
 					</div>
 					<div class="restaurantcartes carte4">
-					<a class="carte" href="tetedoie.html">
-						<header class="carteheader">
-							<img src="layout/composants/images/tetedoie.jpeg" alt class="carteimage"/>
+						<a class="carte" href="tetedoie.html">
+							<header class="carteheader">
+								<img src="layout/composants/images/tetedoie.jpeg" alt class="carteimage"/>
 								<span class="restaurantlegend">Nouveau</span>
-						</header>
-						<footer>
-							<h3 class="restauranttitle">Tête d'oie</h3>
-							<div class="restaurantquartier">Saint George</div>
-							<div class="menuicone">
-								<i class="far fa-heart emptyheart"></i>
-								<i class="fas fa-heart fullheart"></i>
-							</div>
-						</footer>
-					</a>
+							</header>
+							<footer>
+								<h3 class="restauranttitle">Tête d'oie</h3>
+								<div class="restaurantquartier">
+									Saint George
+								</div>
+								<div class="menuicone">
+									<i class="far fa-heart emptyheart"></i>
+									<i class="fas fa-heart fullheart"></i>
+								</div>
+							</footer>
+						</a>
 					</div>
 				</div>
 			</section>
@@ -126,24 +136,15 @@
 				<h3 class="footerlogo">Ohmyfood</h3>
 				<ul class="footerlink">
 					<a href="#">
-						<li class="footerlist">
-							<i class="fas fa-utensils list1"></i>Proposer un restaurant
-						</li>
+						<li class="footerlist"><i class="fas fa-utensils list1"></i>Proposer un restaurant</li>
 					</a>
 					<a href="#">
-						<li class="footerlist ">
-							<i class="fas fa-hands-helping list2"></i>Devenir partenaire
-						</li>
+						<li class="footerlist "><i class="fas fa-hands-helping list2"></i>Devenir partenaire</li>
 					</a>
-					<a href="#">
-						<li class="footerlist">Mentions légales
-						</li>
-					</a>
-					<a href="mailto:ohmyfood@ohmyfood.com">
-						<li class="footerlist">Contact
-						</li>
-					</a>
+					<a href="#"><li class="footerlist">Mentions légales</li></a>
+					<a href="mailto:ohmyfood@ohmyfood.com"><li class="footerlist">Contact</li></a>
 				</ul>
 			</div>
 		</footer>
-    </body>
+	</body>
+
