--- a/bistrotdupotager.html
+++ b/bistrotdupotager.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="fr">
 	<head>
@@ -10,109 +11,183 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&family=Shrikhand&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous"/>
-        <link rel="stylesheet" href="./layout/sass/style.css">
+		<link rel="stylesheet" href="./layout/sass/style.css">
 	</head>
-    <body>
+	<body>
 		<header class="header">
-            <a href="index.html"><i class="fas fa-arrow-left iconback"></i></a>
+			<a href="index.html"><i class="fas fa-arrow-left iconback"></i></a>
 			<h1 class="logo">ohmyfood</h1>
 		</header>
 		<main>
-            <div class="background">
-                <img class="backgroundpicture" src="layout/composants/images/bistrootdupotager.jpeg">
-            </div>
-            <section class="menu">
-                <header class="menuheader">
-                    <div class="menutitle">Le Bistrot du potager</div>
-                    <div class="menuicone">
-                        <i class="far fa-heart emptyheart"></i>
-                        <i class="fas fa-heart fullheart"></i>
-                    </div>
-                </header>
-                <div class="menucontainer">
-                    <div class="entrées">
-                    <h3 class="foodtitle">ENTRÉES</h3>
-                        <div class="foodcard">
-                            <h4 class="foodcardtitle">Soupe de fêves basques</h4>
-                                <p class="foodcarddescription">Au piment d'Espelette</p>
-                                    <p class="foodcardprice">25€</p>
-                        </div>
-                        <div class="foodcard">
-                            <h4 class="foodcardtitle">Foie gras de canard mi-cuit</h4>
-                                <p class="foodcarddescription">À la truffe blanche</p>
-                                    <p class="foodcardprice">35€</p>
-                        </div>
-                        <div class="foodcard">
-                            <h4 class="foodcardtitle">Oeuf poché</h4>
-                                <p class="foodcarddescription">Et sa panelure d'osso-iraty</p>
-                                    <p class="foodcardprice">20€</p>
-                        </div>
-                </div>
-                    <div class="plats">
-                    <h3 class="foodtitle">PLATS</h3>
-                    <div class="foodcard">
-                        <h4 class="foodcardtitle">Côte de boeuf à l'ail des ours</h4>
-                            <p class="foodcarddescription">frites de patate douce</p>
-                            <p class="foodcardprice">40€</p>
-                    </div>
-                    <div class="foodcard">
-                        <h4 class="foodcardtitle">Agneau en croute</h4>
-                            <p class="foodcarddescription">Aux vieux légumes</p>
-                            <p class="foodcardprice">35€</p>
-                    </div>
-                    <div class="foodcard">
-                        <h4 class="foodcardtitle">Filet de bonito</h4>
-                            <p class="foodcarddescription">À l'orange sanguine</p>
-                            <p class="foodcardprice">44€</p>
-                    </div>
-                    </div>
-                    <div class="dessert">
-                    <h3 class="foodtitle">DESSERTS</h3>
-                        <div class="foodcard">
-                            <h4 class="foodcardtitle">Gâteau basque</h4>
-                                <p class="foodcarddescription">Revisité</p>
-                                    <p class="foodcardprice">18€</p>
-                        </div>
-                        <div class="foodcard">
-                            <h4 class="foodcardtitle">Macaron au chocolat d'exception</h4>
-                                <p class="foodcarddescription">Et glace vanille</p>
-                                    <p class="foodcardprice">22€</p>
-                        </div>
-                        <div class="foodcard">
-                            <h4 class="foodcardtitle">Mousse au chocolat</h4>
-                                <p class="foodcarddescription">Au piment d'Espelette</p>
-                                    <p class="foodcardprice">23€</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="commander">
-                    <button class="commanderbtn">Commander</button>
-                </div>
-            </section>
-        </main>
-        <footer class="footer">
+			<div class="background">
+				<img class="backgroundpicture" src="layout/composants/images/bistrootdupotager.jpeg">
+			</div>
+			<section class="menu">
+				<header class="menuheader">
+					<div class="menutitle">
+						Le Bistrot du potager
+					</div>
+					<div class="menuicone">
+						<i class="far fa-heart emptyheart"></i>
+						<i class="fas fa-heart fullheart"></i>
+					</div>
+				</header>
+				<div class="menucontainer">
+					<div class="entrées">
+						<h3 class="foodtitle">ENTRÉES</h3>
+						<div class="foodcard">
+							<div class="foodtext">
+								<h4 class="foodcardtitle">Soupe de fêves basques</h4>
+								<p class="foodcarddescription">
+									Au piment d'Espelette
+								</p>
+							</div>
+							<p class="foodcardprice">
+								25€
+							</p>
+							<div class="checkcircle">
+								<i class="fas fa-check-circle iconecercle"></i>
+							</div>
+						</div>
+						<div class="foodcard">
+							<div class="foodtext">
+								<h4 class="foodcardtitle">Foie gras de canard mi-cuit</h4>
+								<p class="foodcarddescription">
+									À la truffe blanche
+								</p>
+							</div>
+							<p class="foodcardprice">
+								35€
+							</p>
+							<div class="checkcircle">
+								<i class="fas fa-check-circle iconecercle"></i>
+							</div>
+						</div>
+						<div class="foodcard">
+							<div class="foodtext">
+								<h4 class="foodcardtitle">Oeuf poché</h4>
+								<p class="foodcarddescription">
+									Et sa panelure d'osso-iraty
+								</p>
+							</div>
+							<p class="foodcardprice">
+								20€
+							</p>
+							<div class="checkcircle">
+								<i class="fas fa-check-circle iconecercle"></i>
+							</div>
+						</div>
+					</div>
+					<div class="plats">
+						<h3 class="foodtitle">PLATS</h3>
+						<div class="foodcard">
+							<div class="foodtext">
+								<h4 class="foodcardtitle">Côte de boeuf à l'ail des ours</h4>
+								<p class="foodcarddescription">
+									frites de patate douce
+								</p>
+							</div>
+							<p class="foodcardprice">
+								40€
+							</p>
+							<div class="checkcircle">
+								<i class="fas fa-check-circle iconecercle"></i>
+							</div>
+						</div>
+						<div class="foodcard">
+							<div class="foodtext">
+								<h4 class="foodcardtitle">Agneau en croute</h4>
+								<p class="foodcarddescription">
+									Aux vieux légumes
+								</p>
+							</div>
+							<p class="foodcardprice">
+								35€
+							</p>
+							<div class="checkcircle">
+								<i class="fas fa-check-circle iconecercle"></i>
+							</div>
+						</div>
+						<div class="foodcard">
+							<div class="foodtext">
+								<h4 class="foodcardtitle">Filet de bonito</h4>
+								<p class="foodcarddescription">
+									À l'orange sanguine
+								</p>
+							</div>
+							<p class="foodcardprice">
+								44€
+							</p>
+							<div class="checkcircle">
+								<i class="fas fa-check-circle iconecercle"></i>
+							</div>
+						</div>
+					</div>
+					<div class="dessert">
+						<h3 class="foodtitle">DESSERTS</h3>
+						<div class="foodcard">
+							<div class="foodtext">
+								<h4 class="foodcardtitle">Gâteau basque</h4>
+								<p class="foodcarddescription">
+									Revisité
+								</p>
+							</div>
+							<p class="foodcardprice">
+								18€
+							</p>
+							<div class="checkcircle">
+								<i class="fas fa-check-circle iconecercle"></i>
+							</div>
+						</div>
+						<div class="foodcard">
+							<div class="foodtext">
+								<h4 class="foodcardtitle">Macaron au chocolat d'exception</h4>
+								<p class="foodcarddescription">
+									Et glace vanille
+								</p>
+							</div>
+							<p class="foodcardprice">
+								22€
+							</p>
+							<div class="checkcircle">
+								<i class="fas fa-check-circle iconecercle"></i>
+							</div>
+						</div>
+						<div class="foodcard">
+							<div class="foodtext">
+								<h4 class="foodcardtitle">Mousse au chocolat</h4>
+								<p class="foodcarddescription">
+									Au piment d'Espelette
+								</p>
+							</div>
+							<p class="foodcardprice">
+								23€
+							</p>
+							<div class="checkcircle">
+								<i class="fas fa-check-circle iconecercle"></i>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="commander">
+					<button class="commanderbtn">Commander</button>
+				</div>
+			</section>
+		</main>
+		<footer class="footer">
 			<div class="footercontent">
 				<h3 class="footerlogo">Ohmyfood</h3>
 				<ul class="footerlink">
 					<a href="#">
-						<li class="footerlist">
-							<i class="fas fa-utensils list1"></i>Proposer un restaurant
-						</li>
+						<li class="footerlist"><i class="fas fa-utensils list1"></i>Proposer un restaurant</li>
 					</a>
 					<a href="#">
-						<li class="footerlist ">
-							<i class="fas fa-hands-helping list2"></i>Devenir partenaire
-						</li>
+						<li class="footerlist "><i class="fas fa-hands-helping list2"></i>Devenir partenaire</li>
 					</a>
-					<a href="#">
-						<li class="footerlist">Mentions légales
-						</li>
-					</a>
-					<a href="mailto:ohmyfood@ohmyfood.com">
-						<li class="footerlist">Contact
-						</li>
-					</a>
+					<a href="#"><li class="footerlist">Mentions légales</li></a>
+					<a href="mailto:ohmyfood@ohmyfood.com"><li class="footerlist">Contact</li></a>
 				</ul>
 			</div>
 		</footer>
-    </body>
+	</body>
+
