--- a/index.html
+++ b/index.html
@@ -18,56 +18,58 @@
 			<img src="layout/composants/images/loadingspinner.svg" class="spinner"/>
 		</div>
 		<header class="header">
-			<h1 class="logo logoindex">ohmyfood</h1>
+			<h1 class="header__logo header__logoindex">ohmyfood</h1>
 		</header>
 		<main>
 			<!-- Section localisation-->
 			<section class="localisation">
+				<div class="localisation__icon">
 				<i class="fas fa-map-marker-alt"></i>
-				<span class="localisationtext">Lyon, Croix Rousse</span>
+				</div>
+				<span class="localisation__text">Lyon, Croix Rousse</span>
 			</section>
 			<!-- Section explore-->
 			<section class="explore">
-				<h2 class="exploretitle">Réservez le menu qui<br> vous convient</h2>
-				<p class="exploretext">
+				<h2 class="explore__title">Réservez le menu qui<br> vous convient</h2>
+				<p class="explore__text">
 					Découvrez des restaurants d'exception séléctionnés par nos soins.
 				</p>
-				<button class="explorebutton">Explorer nos restaurants</button>
+				<button class="explore__button">Explorer nos restaurants</button>
 			</section>
 			<!-- Section fonctionnement-->
 			<section class="fonctionnement">
-				<h2 class="fonctionnementtitle">Fonctionnement</h2>
-				<ol class="fonctionnementetapes">
-					<li class="fonctionnementcarte">
+				<h2 class="fonctionnement__title">Fonctionnement</h2>
+				<ol class="fonctionnement__etapes">
+					<li class="fonctionnement__carte">
 						<i class="fas fa-mobile-alt"></i>
-						<span class="fonctionnementtexte">Choisissez un restaurant</span>
+						<span class="fonctionnement__texte">Choisissez un restaurant</span>
 					</li>
-					<li class="fonctionnementcarte">
+					<li class="fonctionnement__carte">
 						<i class="fas fa-list-ul"></i>
-						<span class="fonctionnementtexte">Composez votre menu</span>
+						<span class="fonctionnement__texte">Composez votre menu</span>
 					</li>
-					<li class="fonctionnementcarte">
+					<li class="fonctionnement__carte">
 						<i class="fas fa-store"></i>
-						<span class="fonctionnementtexte">Choisissez un restaurant</span>
+						<span class="fonctionnement__texte">Choisissez un restaurant</span>
 					</li>
 				</ol>
 			</section>
 			<!-- Section restaurants-->
 			<section class="restaurants">
-				<h2 class="restaurantstitle">Restaurants</h2>
-				<div class="cartecontainer">
-					<div class="restaurantcartes carte1">
-						<a class="carte" href="lesapothicaires.html">
-							<header class="carteheader">
-								<img src="layout/composants/images/lesapothicaires.jpeg" alt class="carteimage"/>
-								<span class="restaurantlegend">Nouveau</span>
+				<h2 class="restaurants__title">Restaurants</h2>
+				<div class="restaurants__cartecontainer">
+					<div class="restaurant__cartes carte1">
+						<a class="restaurant__carteslink" href="lesapothicaires.html">
+							<header class="restaurant__carteheader">
+								<img src="layout/composants/images/lesapothicaires.jpeg" alt class="restaurant__carteimage"/>
+								<span class="restaurant__legend">Nouveau</span>
 							</header>
 							<footer>
-								<h3 class="restauranttitle">Les apothicaires</h3>
-								<div class="restaurantquartier">
-									Foch
+								<h3 class="restaurant__title">Le bistrot du potager</h3>
+								<div class="restaurant__quartier">
+									Gerland
 								</div>
-								<div class="menuicone">
+								<div class="restaurant__menuicone">
 									<i class="far fa-heart emptyheart"></i>
 									<i class="fas fa-heart fullheart"></i>
 								</div>
@@ -76,8 +78,8 @@
 					</div>
 					<div class="restaurantcartes carte2">
 						<a class="carte" href="bistrotdupotager.html">
-							<h eader class="carteheader">
-								<img src="layout/composants/images/bistrootdupotager.jpeg" alt class="carteimage"/>
+							<header class="carteheader">
+								<img src="layout/composants/images/bistrootdupotager.jpeg" alt class="restaurant__carteimage"/>
 								<span class="restaurantlegend">Nouveau</span>
 							</header>
 							<footer>
@@ -95,7 +97,7 @@
 					<div class="restaurantcartes carte3">
 						<a class="carte" href="cozna.html">
 							<header class="carteheader">
-								<img src="layout/composants/images/cozna.jpeg" alt class="carteimage"/>
+								<img src="layout/composants/images/cozna.jpeg" alt class="restaurant__carteimage"/>
 								<span class="restaurantlegend">Nouveau</span>
 							</header>
 							<footer>
@@ -113,7 +115,7 @@
 					<div class="restaurantcartes carte4">
 						<a class="carte" href="tetedoie.html">
 							<header class="carteheader">
-								<img src="layout/composants/images/tetedoie.jpeg" alt class="carteimage"/>
+								<img src="layout/composants/images/tetedoie.jpeg" alt class="restaurant__carteimage"/>
 								<span class="restaurantlegend">Nouveau</span>
 							</header>
 							<footer>
@@ -132,17 +134,17 @@
 			</section>
 		</main>
 		<footer class="footer">
-			<div class="footercontent">
-				<h3 class="footerlogo">Ohmyfood</h3>
-				<ul class="footerlink">
+			<div class="footer__content">
+				<h3 class="footer__logo">Ohmyfood</h3>
+				<ul class="footer__link">
 					<a href="#">
-						<li class="footerlist"><i class="fas fa-utensils list1"></i>Proposer un restaurant</li>
+						<li class="footer__list"><i class="fas fa-utensils footer__list1"></i>Proposer un restaurant</li>
 					</a>
 					<a href="#">
-						<li class="footerlist "><i class="fas fa-hands-helping list2"></i>Devenir partenaire</li>
+						<li class="footer__list "><i class="fas fa-hands-helping footer__list2"></i>Devenir partenaire</li>
 					</a>
-					<a href="#"><li class="footerlist">Mentions légales</li></a>
-					<a href="mailto:ohmyfood@ohmyfood.com"><li class="footerlist">Contact</li></a>
+					<a href="#"><li class="footer__list">Mentions légales</li></a>
+					<a href="mailto:ohmyfood@ohmyfood.com"><li class="footer__list">Contact</li></a>
 				</ul>
 			</div>
 		</footer>
