--- a/tetedoie.html
+++ b/tetedoie.html
@@ -16,7 +16,7 @@
 	<body>
 		<header class="header">
 			<a href="index.html"><i class="fas fa-arrow-left iconback"></i></a>
-			<h1 class="logo">ohmyfood</h1>
+			<h1 class="header__logo">ohmyfood</h1>
 		</header>
 		<main>
 			<div class="background">
@@ -175,17 +175,17 @@
 			</section>
 		</main>
 		<footer class="footer">
-			<div class="footercontent">
-				<h3 class="footerlogo">Ohmyfood</h3>
-				<ul class="footerlink">
+			<div class="footer__content">
+				<h3 class="footer__logo">Ohmyfood</h3>
+				<ul class="footer__link">
 					<a href="#">
-						<li class="footerlist"><i class="fas fa-utensils list1"></i>Proposer un restaurant</li>
+						<li class="footer__list"><i class="fas fa-utensils footer__list1"></i>Proposer un restaurant</li>
 					</a>
 					<a href="#">
-						<li class="footerlist "><i class="fas fa-hands-helping list2"></i>Devenir partenaire</li>
+						<li class="footer__list "><i class="fas fa-hands-helping footer__list2"></i>Devenir partenaire</li>
 					</a>
-					<a href="#"><li class="footerlist">Mentions légales</li></a>
-					<a href="mailto:ohmyfood@ohmyfood.com"><li class="footerlist">Contact</li></a>
+					<a href="#"><li class="footer__list">Mentions légales</li></a>
+					<a href="mailto:ohmyfood@ohmyfood.com"><li class="footer__list">Contact</li></a>
 				</ul>
 			</div>
 		</footer>
